# Dynamic-System-Programming-HW

./: README.md  commands.txt  main.cpp  plot
HW4/: Part2_results_20190837.csv  Part3_results_20190837.csv  cart  cart_pole_cpp_20240000.cpp
HW4/cartpole/src/: pid_publisher_subscriber_node.cpp
HW4/install/: local_setup.sh  setup.sh
HW4/install/cartpole/lib/cartpole/: pid_publisher_subscriber_node
HW4/install/cartpole/share/cartpole/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
HW4/log/: latest_build
hw1/: commands.txt
hw2_20190837/: README.md
hw2_20190837/mymat/include/: mymat.hpp
hw2_20190837/mymat/src/: mymat.cpp  test.cpp
hw2_20190837/simulation/: CMakeLists.txt
hw2_20190837/simulation/src/: simulate.cpp  test.cpp
hw3/four_bar_linkage_cpp/: CMakeLists.txt
hw3/four_bar_linkage_cpp/src/: four_bar_linkage_simulation_20190837.cpp  four_bar_linkage_simulation_20210897.cpp
hw3/rosws/install/: local_setup.sh  setup.sh
hw3/rosws/log/: latest_build
practice/: midterm.world
practice/TA Session Week 01-20240412/: TA_Session_Week1_commands.txt
practice/TA Session Week 02-20240412/: TA_Session_Week2_commands.txt
practice/TA Session Week 03-20240412/: TA_Session_week3.txt
practice/TA Session Week 04-20240412/: TA_Session_week4_revised.txt
practice/TA Session Week 5-20240412/: TA_Session_Week5_commands.txt
practice/TA Session Week 6-20240412/: TA_Session_Week6_commands.txt
practice/ros2_ws/install/: local_setup.sh  setup.sh
practice/ros2_ws/log/: latest_build
practice/ros2_ws/src/midterm/: CMakeLists.txt
(+16 files in other folders)
